--- a/kubernetes-files/frontend-deploy-service.yaml
+++ b/kubernetes-files/frontend-deploy-service.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: frontend
-        image: 381492212060.dkr.ecr.us-east-1.amazonaws.com/ecr-frontend:20
+        image: 010526243991.dkr.ecr.ap-south-2.amazonaws.com/frontend:latest
         ports:
         - containerPort: 80
           # env:
